--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     </ul>
     <h2>Others:</h2>
     <ul>
-        <li><a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a></li>
-        <li><a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a></li>
+        <li><a href="public/about.html">About Me</a></li>
+        <li><a href="public/contact.html">Contact Me</a></li>
     </ul>
     <p>&COPY;Sudarshan Sonawane. All Right Reserved.</p>
 
